# dirsize

./: Cargo.toml  license.txt  readme.md
src/: lib.rs  main.rs  menu.rs  scanning.rs  structs.rs
